--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
-    <script src="./strings.js" defer></script>
-    <script src="./promises.js" defer></script>
+    <script src="./4_logical-assigments.js" defer></script>
+
 </head>
 <body>
         <div>
